unpackaged/main/default/objects/LiveChatTranscriptEvent__c/LiveChatTranscriptEvent__c.object-meta.xml
<CustomObject>
    <description>Used by Service Analytics v6+ Analytics App install. Do not remove.</description>
    <label>LiveChatTranscriptEvent__c</label>
    <nameField>
        <displayFormat>LCT-{000000}</displayFormat>
        <label>LiveChatTranscriptEvent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LiveChatTranscriptEvent__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>