unpackaged/main/default/objects/LiveChatTranscriptEvent__c/fields/AgentId__c.field-meta.xml
<CustomField>
    <fullName>AgentId__c</fullName>
    <label>Agent ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>