unpackaged/main/default/objects/LiveChatTranscriptEvent__c/fields/LiveChatTranscriptId__c.field-meta.xml
<CustomField>
    <fullName>LiveChatTranscriptId__c</fullName>
    <label>LiveChatTranscript ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>